Fix issue where navbar shifted with the horizontal scrollbar

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -18,10 +18,15 @@ p, button {
 }
 
 .desktop-navbar {
-  background : $background;
-  display : flex;
-  justify-content : center;
-  padding : 1.3rem 3rem;
+  background: $background;
+  display: flex;
+  justify-content: center;
+  padding: 1.3rem 3rem;
+  position: fixed; 
+  top: 0; 
+  left: 0;
+  right: 0;
+  z-index: 1000; 
 }
 
 .desktop-navbar-container {
@@ -81,11 +86,15 @@ p, button {
     display: none;
   }
   .mobile-navbar {
-    background : $background;
+    background: $background;
     display: flex;
     justify-content: flex-end;
-    position: relative;
+    position: fixed; 
+    top: 0; 
+    left: 0;
+    right: 0;
     padding: 1rem 2rem;
+    z-index: 1000; 
   }
 
   .logo {
